# sx9-orbital

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN_SIMULATION.md  PROGRESS-2026-02-03-AFTERNOON.md  PROGRESS-2026-02-03.md  README.md  TODO.md  sx9-factory.toml
.serena/: project.yml
crates/beam-routing/: Cargo.toml
crates/beam-routing/src/: lib.rs
crates/candidate-selector/: Cargo.toml
crates/candidate-selector/src/: lib.rs  loader.rs  main.rs  scorer.rs  security.rs  selector.rs
crates/collision-avoidance/: Cargo.toml
crates/collision-avoidance/src/: lib.rs
crates/fuzz-harness/: Cargo.toml
crates/fuzz-harness/src/: generators.rs  lib.rs  reports.rs  runner.rs
crates/ground-station-wasm/: Cargo.toml
crates/ground-station-wasm/src/: cloudflare_worker.rs  contact.rs  door.rs  downselect.rs  fso_state_machine.rs  lib.rs  link_budget.rs  satellite_location.rs  slew.rs  stations.rs  tracking.rs  weather.rs  weather_api.rs  weather_historical.rs
crates/ground-stations/: Cargo.toml
crates/ground-stations/src/: lib.rs
crates/orbital-glaf/: Cargo.toml
crates/orbital-glaf/examples/: neo4j_test.rs
crates/orbital-glaf/src/: export.rs  lib.rs  neo4j_client.rs  neo4j_export.rs  rfc_routing.rs  routing.rs  satellite_ann.rs
crates/orbital-mechanics/: Cargo.toml
crates/orbital-mechanics/src/: lib.rs
data/: all_ground_nodes_backup.json  all_ground_nodes_backup.json.bak  financial_infrastructure.json  foundation_candidates.json  halo_constellation.rs  halo_isl_adjacency.json  halo_isl_edges.csv  halo_isl_network.graphml  halo_isl_network.json  orbital_constellation.cypher  peeringdb_facilities.json  peeringdb_ixps.json  reference_pop_locations.json  selected_247_foundation.json  selected_247_smart.geojson  selected_247_smart.json  selected_247_smart.json.bak  selected_247_stations.geojson  selected_247_stations.json  smart_infrastructure.json
data/cable-infrastructure/: cable_landing_complete.json  cable_landing_points.json  cable_landing_points_geo.json  submarine_cables.json
docker/: Dockerfile.gateway  build.sh  docker-compose.yml
docker/ground-station-sim/: Cargo.toml  Dockerfile
docker/ground-station-sim/src/: main.rs
docker/ground-station-wasm/: Dockerfile  docker-compose.yml
docs/: Orbital_Operations_Task_Breakdown.csv  Orbital_Operations_Tasks.csv  ZOE_ORBITAL_OPENAPI.yaml  constellation-logic.md  dataflow-legion-hotcold.md  laserlight-osint.md
gateway/: Cargo.toml
gateway/src/: ann_routes.rs  beam_profile.rs  entropy_harvester.rs  main.rs  memory.rs  nats_telemetry.rs  realtime.rs  realtime_routes.rs  routes.rs  sim_state.rs  state_routes.rs  tle_generator.rs  weather_routes.rs
legacy-migration/: MIGRATION-README.md  ctas-glaf-ONE.txt  ctas-hash-fingerprint-engine.txt  ctas7-auto-glaph.txt  ctas7-glaf-three.txt  ctas7-hsrt-conversation.txt  ctast-glaf-two.txt  docker-compose.glaf.yml.txt
legacy-migration/ctas7-gis/ctas7-gis-cesium-main/: Dockerfile  Dockerfile.dev  docker-compose.yml
legacy-migration/ctas7-gis/ctas7-gis-cesium-main/beam-patterns-wasm/: Cargo.toml  README.md
legacy-migration/ctas7-graph-viewer/app/: page.tsx
legacy-migration/ctas7-graph-viewer/components/: graph-canvas.tsx  node-details-panel.tsx
legacy-migration/ctas7-graph-viewer/lib/: graph-data.ts
legacy-migration/ctas7-streaming-service/src/: cache.ts  config.ts  data-aggregator.ts  http-client.ts  index.ts  logger.ts  metrics.ts  normalizers.ts  streaming.ts  types.ts
seed-data/extracted-seed-dev/: Cargo.toml  START_GROUND_STATION.sh  ctas-optical-ground.code-workspace  docker-compose.dev.yml
seed-data/extracted-seed-dev/.github/workflows/: rust-ci.yml
seed-data/extracted-seed-dev/ccsds142-harness/: Cargo.toml  README.md
seed-data/extracted-seed-dev/indi-fine-tracking-rust/: Cargo.toml  README.md
seed-data/extracted-seed-dev/indi-fine-tracking-rust/src/: main.rs
seed-data/extracted-seed-dev/orekit-service/: Dockerfile  build.gradle
seed-data/extracted-seed-dev/yamcs-seed/: README_TELEMETRY.md  telemetry_simulator.py
seed-data/extracted-seed/ccsds142-harness/src/: main.rs
seed-data/extracted-seed/orekit-service/: README.md  settings.gradle
seed-data/extracted-seed/yamcs-seed/: README.md  docker-compose.yml
tools/: build_candidate_set.py  export_neo4j_cypher.py  export_satellite_subgraph.py  fetch_ixp_locations.py  load_neo4j_orbital.py
tools/vault/: .gitignore  load-env.sh
ui/: SX9-TAURI-UI-FRONTEND-IMPL.md
ui/cesium-orbital/: .env.example  index.html  load-env.sh  package-lock.json  package.json  pnpm-lock.yaml  real_meo_data.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
ui/cesium-orbital/beam-patterns-wasm/: Cargo.toml
ui/cesium-orbital/beam-patterns-wasm/src/beam_patterns/: mod.rs
ui/cesium-orbital/beam-patterns-wasm/src/ecs/: components.rs  mod.rs
ui/cesium-orbital/beam-patterns-wasm/src/utils/: mod.rs
ui/cesium-orbital/docs/: COMPONENT_LIBRARY.md
ui/cesium-orbital/scripts/: fix_hd4_phases.sql
ui/cesium-orbital/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/cesium-orbital/src/components/: ActivityFeed.tsx  BeamDashboard.tsx  BeamPatternDashboard.tsx  BeamPatternTab.tsx  BeamPatternViewer.tsx  CesiumWorldView.tsx  CollapsibleNav.tsx  ConstellationGraphView.tsx  DataTableView.tsx  DiagnosticPanel.tsx  ErrorBoundary.tsx  FinancialDashboard.tsx  FinancialMonitoringPanel.tsx  FlatMapView.tsx  GroundStationConfig.tsx  InfrastructureMapView.tsx  KPIDrawers.tsx  LeftPanel.tsx  LoadingScreen.tsx  OrbitalView.tsx  RadiationBeltInfo.tsx  RightPanel.tsx  SatelliteControlPanel.tsx  SpaceWorldDemo.tsx
ui/cesium-orbital/src/config/: graphStyles.ts
ui/cesium-orbital/src/hooks/: useBeamPatterns.ts  useBeamTelemetry.ts  useMockData.ts  useRealtimeTelemetry.ts  useSupabaseData.ts  useSystemDiagnostics.ts
ui/cesium-orbital/src/pages/: BeamPatternDashboard.tsx  FlatMapView.tsx
ui/cesium-orbital/src/scripts/: addLaserLightAnchors.ts  diagnoseSatCoords.ts  loadStations.ts  runMigration.ts  seedBeamPatterns.ts  seedData.ts  telemetrySimulator.ts
ui/cesium-orbital/src/services/: agentService.ts  (+8 more)
(+38 files in other folders)
