[workspace]
members = [
    "gateway",
    "crates/orbital-mechanics",
    "crates/beam-routing",
    "crates/ground-stations",
    "crates/collision-avoidance",
    "crates/ground-station-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Synaptix9 Engineering Group"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Orbital
nalgebra = "0.33"
sgp4 = "0.9"
