[package]
name = "beam-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ANN/CNN weather-aware optical beam routing for FSO links"

[package.metadata.sx9]
crate_type = "library"
mission = "Orbital"
rfc_ref = "RFC-9000A"
bernoulli_zone = "C"
llm_allowed = false
phases = ["BUILD", "OPERATE"]
security_level = "critical"
ssdf_practices = ["PW.8.1", "RV.1.2"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
