[package]
name = "candidate-selector"
version = "0.1.0"
edition = "2021"
description = "Ground station candidate selection for SX9-Orbital constellation"
authors = ["Synaptix9 Engineering Group"]

[package.metadata.sx9]
crate_type = "tool"
mission = "Orbital"
rfc_ref = "RFC-9050"
bernoulli_zone = "D"
llm_allowed = false

[[bin]]
name = "select-stations"
path = "src/main.rs"

[lib]
name = "candidate_selector"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# GeoJSON output
geojson = "0.24"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.17"
