[package]
name = "collision-avoidance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Collision avoidance with UCLA CTAS integration"

[package.metadata.sx9]
crate_type = "library"
mission = "Orbital"
rfc_ref = "RFC-9000A"
bernoulli_zone = "B"
llm_allowed = false
phases = ["OPERATE", "MONITOR"]
security_level = "critical"
ssdf_practices = ["PW.8.1", "RV.1.2", "PW.9.1"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
