[package]
name = "ground-station-wasm"
version = "0.1.0"
edition = "2021"
description = "Ground station digital twin WASM - slew control, door state, satellite tracking"
authors = ["Synaptix9 Engineering Group"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math for orbital calculations
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
