[package]
name = "ground-stations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "257 Airbus FSO ground station management"

[package.metadata.sx9]
crate_type = "library"
mission = "Orbital"
rfc_ref = "RFC-9000A"
bernoulli_zone = "C"
llm_allowed = false
phases = ["BUILD", "OPERATE", "MONITOR"]
security_level = "critical"
ssdf_practices = ["PW.8.1", "RV.1.2", "PS.3.1"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
