[package]
name = "orbital-glaf"
version = "0.1.0"
edition = "2021"
description = "Graph Layer Analytical Feed for orbital constellation routing"
authors = ["Synaptix9 Engineering Group"]

[package.metadata.sx9]
crate_type = "core"
mission = "Orbital"
rfc_ref = "RFC-9050"
bernoulli_zone = "A"
llm_allowed = false

[dependencies]
# Graph engine
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
