[package]
name = "ground-station-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
orbital-mechanics = { path = "../../crates/orbital-mechanics" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Time
chrono = "0.4"

[[bin]]
name = "ground-station-sim"
path = "src/main.rs"
