[package]
name = "beam-patterns-wasm"
version = "7.2.0"
edition = "2021"
authors = ["SpaceWorld Team"]
description = "High-performance laser beam pattern simulation for optical satellite communications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Lightweight ECS
hecs = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
